--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -119,6 +119,7 @@
             tools:visibility="visible" />
 
         <TextView
+            android:id="@+id/text_view_error"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_above="@id/button_retry"
