--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -17,15 +17,49 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/image_view"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:adjustViewBounds="true"
-                tools:layout_height="300dp"
-                tools:scaleType="centerCrop"
-                tools:src="@drawable/ic_launcher_background" />
+                android:layout_height="wrap_content">
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/image_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
+                    android:adjustViewBounds="true"
+                    tools:layout_height="300dp"
+                    tools:scaleType="centerCrop"
+                    tools:src="@drawable/ic_launcher_background" />
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_download"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_margin="16dp"
+                    app:cardBackgroundColor="#80000000"
+                    app:cardCornerRadius="15dp"
+                    app:cardElevation="0dp"
+                    tools:background="#80000000">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="center"
+                            android:src="@drawable/ic_arrow_downward" />
+
+                    </LinearLayout>
+
+
+                </androidx.cardview.widget.CardView>
+
+            </RelativeLayout>
+
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
@@ -404,10 +438,10 @@
                 android:id="@+id/rec_view_user_photos"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 app:spanCount="2"
-                tools:listitem="@layout/item_unsplash_photo"
-                android:orientation="vertical" />
+                tools:listitem="@layout/item_unsplash_photo" />
 
         </LinearLayout>
 
@@ -418,8 +452,9 @@
         android:id="@+id/layout_loading"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#fff"
         android:gravity="center"
-        android:background="#fff">
+        tools:visibility="gone">
 
         <ProgressBar
             android:id="@+id/progress_bar"
