--- a/app/src/main/res/layout/item_unsplash_photo.xml
+++ b/app/src/main/res/layout/item_unsplash_photo.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="2dp"
-    android:layout_marginBottom="2dp"
-    android:layout_marginRight="5dp"
     android:layout_marginLeft="5dp"
-    app:cardElevation="4dp"
+    android:layout_marginTop="2dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginBottom="2dp"
+    android:orientation="vertical"
     app:cardCornerRadius="10dp"
-    android:orientation="vertical">
+    app:cardElevation="4dp">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
@@ -19,7 +19,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="300dp"
             android:orientation="vertical">
 
             <ImageView
@@ -27,161 +27,83 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_alignParentEnd="true"
-                android:layout_margin="15dp"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginEnd="15dp"
-                android:layout_marginBottom="15dp"
-                app:cardBackgroundColor="#80000000"
-                app:cardCornerRadius="15dp"
-                app:cardElevation="0dp"
-                tools:background="#80000000">
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="center"
-                        android:src="@drawable/ic_arrow_downward" />
-
-                </LinearLayout>
-
-
-            </androidx.cardview.widget.CardView>
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <View
-                android:id="@+id/view_back_item"
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:background="#99000000" />
-
-
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:gravity="center|left"
-                android:orientation="horizontal"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp">
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    app:cardCornerRadius="25dp"
-                    app:cardElevation="2dp"
-                    tools:background="#80FFFFFF">
-
-                    <ImageView
-                        android:id="@+id/image_view_profile"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="centerCrop"
-                        tools:src="@drawable/ic_user" />
-
-                </androidx.cardview.widget.CardView>
 
                 <androidx.appcompat.widget.LinearLayoutCompat
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:id="@+id/view_back_item"
+                    android:layout_width="wrap_content"
+                    android:layout_height="60dp"
                     android:gravity="center|left"
-                    android:orientation="vertical">
+                    android:orientation="horizontal"
+                    android:background="#99000000"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp">
 
-                    <TextView
-                        android:id="@+id/text_view_user_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginEnd="8dp"
-                        android:ellipsize="end"
-                        android:gravity="center_vertical"
-                        android:maxLines="1"
-                        android:textColor="@color/white"
-                        android:textSize="14sp"
-                        tools:text="username" />
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        app:cardCornerRadius="25dp"
+                        app:cardElevation="2dp"
+                        tools:background="#80FFFFFF">
 
-                    <TextView
-                        android:id="@+id/text_view_title_created_at"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginEnd="8dp"
-                        android:ellipsize="end"
-                        android:gravity="center_vertical"
-                        android:maxLines="1"
-                        android:text="Created at"
-                        android:textColor="#B3FFFFFF"
-                        android:textSize="11sp"
-                        android:visibility="gone"
-                        tools:text="Created at"
-                        tools:visibility="visible" />
+                        <ImageView
+                            android:id="@+id/image_view_profile"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="centerCrop"
+                            tools:src="@drawable/ic_user" />
 
-                    <TextView
-                        android:id="@+id/text_view_created_at"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:ellipsize="end"
-                        android:gravity="center_vertical"
-                        android:maxLines="1"
-                        android:textColor="@color/white"
-                        android:textSize="12sp"
-                        android:visibility="gone"
-                        tools:text="data"
-                        tools:visibility="visible" />
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.appcompat.widget.LinearLayoutCompat
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center|left"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/text_view_user_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginEnd="8dp"
+                            android:ellipsize="end"
+                            android:gravity="center_vertical"
+                            android:maxLines="1"
+                            android:textColor="@color/white"
+                            android:textSize="14sp"
+                            tools:text="username" />
+
+
+                        <TextView
+                            android:id="@+id/text_view_likes"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginEnd="8dp"
+                            android:drawableLeft="@drawable/ic_like_border"
+                            android:drawablePadding="4dp"
+                            android:ellipsize="end"
+                            android:gravity="center_vertical"
+                            android:maxLines="1"
+                            android:text="likes"
+                            android:textColor="#B3FFFFFF"
+                            android:textSize="11sp"
+                            tools:text="likes" />
+
+                    </androidx.appcompat.widget.LinearLayoutCompat>
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
-                <View
-                    android:id="@+id/line_item"
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:layout_margin="7dp"
-                    android:background="#B3FFFFFF" />
-
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight=".3"
-                    android:gravity="center|left"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/text_view_likes"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginEnd="8dp"
-                        android:drawableLeft="@drawable/ic_like_border"
-                        android:drawablePadding="4dp"
-                        android:ellipsize="end"
-                        android:gravity="center_vertical"
-                        android:maxLines="1"
-                        android:text="likes"
-                        android:textColor="#B3FFFFFF"
-                        android:textSize="11sp"
-                        tools:text="likes" />
-
-                </androidx.appcompat.widget.LinearLayoutCompat>
-
-
-            </androidx.appcompat.widget.LinearLayoutCompat>
+            </RelativeLayout>
 
         </RelativeLayout>
+
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
