[FEATURE] add download manager.

--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -27,8 +27,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
                     android:adjustViewBounds="true"
-                    tools:layout_height="300dp"
-                    tools:scaleType="centerCrop"
+                    tools:scaleType="fitXY"
                     tools:src="@drawable/ic_launcher_background" />
 
                 <androidx.cardview.widget.CardView
