[FEATURE] add font and fix download and fix placeHolder Glide

--- a/app/src/main/res/layout/item_unsplash_photo.xml
+++ b/app/src/main/res/layout/item_unsplash_photo.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="5dp"
-    android:layout_marginTop="2dp"
-    android:layout_marginRight="5dp"
-    android:layout_marginBottom="2dp"
+    android:layout_marginLeft="6dp"
+    android:layout_marginTop="3dp"
+    android:layout_marginRight="6dp"
+    android:layout_marginBottom="3dp"
     android:orientation="vertical"
     app:cardCornerRadius="10dp"
     app:cardElevation="4dp">
@@ -25,7 +25,8 @@
             <ImageView
                 android:id="@+id/image_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:scaleType="center" />
 
 
             <androidx.cardview.widget.CardView
