[FEATURE] add alertDialog for successMessage and fix DetailsFragment ui add setWallpaper for mainImage -> DetailsFragment

--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -29,32 +29,108 @@
                     android:adjustViewBounds="true"
                     tools:src="@drawable/ic_launcher_background" />
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/card_download"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_margin="16dp"
-                    app:cardBackgroundColor="#80000000"
-                    app:cardCornerRadius="15dp"
-                    app:cardElevation="0dp"
-                    tools:background="#80000000">
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:gravity="center|left"
+                    android:orientation="horizontal"
+                    android:padding="15dp"
+                    android:paddingEnd="10dp">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
 
-                        <ImageView
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/card_download"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="10dp"
+                        app:cardBackgroundColor="#80FFFFFF"
+                        app:cardCornerRadius="15dp"
+                        app:cardElevation="0dp"
+                        tools:background="#80000000">
+
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:scaleType="center"
-                            android:src="@drawable/ic_arrow_downward" />
+                            android:gravity="center"
+                            android:orientation="horizontal"
+                            android:paddingStart="5dp"
+                            android:paddingEnd="15dp">
 
-                    </LinearLayout>
+                            <ImageView
+                                android:id="@+id/image_view_download"
+                                android:layout_width="35dp"
+                                android:layout_height="40dp"
+                                android:scaleType="center"
+                                android:src="@drawable/ic_arrow_downward" />
+
+                            <androidx.appcompat.widget.AppCompatTextView
+                                android:id="@+id/text_view_download"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:text="Save"
+                                android:textColor="@color/white"
+                                android:textSize="14sp"
+                                android:textStyle="bold" />
 
 
-                </androidx.cardview.widget.CardView>
+                        </LinearLayout>
+
+
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/card_wallpaper"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:cardBackgroundColor="#80FFFFFF"
+                        app:cardCornerRadius="15dp"
+                        app:cardElevation="0dp"
+                        tools:background="#80000000">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:orientation="horizontal"
+                            android:paddingStart="5dp"
+                            android:paddingEnd="15dp">
+
+                            <ImageView
+                                android:id="@+id/image_view_wallpaper"
+                                android:layout_width="35dp"
+                                android:layout_height="40dp"
+                                android:scaleType="center"
+                                android:src="@drawable/ic_wallpaper" />
+
+                            <androidx.appcompat.widget.AppCompatTextView
+                                android:id="@+id/text_view_wallpaper"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:text="Wallpaper"
+                                android:textColor="@color/white"
+                                android:textSize="14sp"
+                                android:textStyle="bold" />
+
+                            <ProgressBar
+                                android:id="@+id/progress_bar_wallpaper"
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
+                                android:layout_marginLeft="10dp"
+                                android:visibility="gone"
+                                tools:visibility="visible" />
+
+
+                        </LinearLayout>
+
+
+                    </androidx.cardview.widget.CardView>
+
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
 
             </RelativeLayout>
 
