--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,4 +18,8 @@
         <item name="fontFamily">@font/roboto_regular</item>
     </style>
 
+    <style name="WallpaperAlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:windowBackground">@drawable/shape_background_dialog</item>
+    </style>
+
 </resources>
