--- a/app/src/main/res/layout/layout_downlaod_dialog.xml
+++ b/app/src/main/res/layout/layout_downlaod_dialog.xml
@@ -23,17 +23,22 @@
             android:paddingEnd="30dp"
             android:paddingBottom="7dp">
 
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_cloud_download" />
+
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center|left"
+                android:gravity="center|right"
                 android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Downloading"
+                    android:text="@string/string_title_download_dialog"
                     android:textColor="@color/black"
                     android:textSize="16dp"
                     android:textStyle="bold" />
@@ -42,15 +47,11 @@
                     android:id="@+id/text_view_title_file"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
                     android:text="imageWallpaper.jpg"
-                    android:textSize="14sp" />
+                    android:textSize="13sp" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_cloud_download" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -68,7 +69,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
             android:gravity="center"
-            android:text="please wait while the download is loading ..."
+            android:text="@string/string_waiting_download_dialog"
             android:textSize="12dp" />
 
         <androidx.appcompat.widget.LinearLayoutCompat
