add network alert dialog and fix something

--- a/app/src/main/res/layout/unsplash_photo_load_state_footer.xml
+++ b/app/src/main/res/layout/unsplash_photo_load_state_footer.xml
@@ -17,12 +17,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="7dp"
-        android:text="Result could not be loaded" />
+        android:text="@string/string_error_loading_results" />
 
     <Button
         android:id="@+id/btn_retry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Retry" />
+        android:text="@string/string_retry_find_results" />
 
 </LinearLayout>
