--- a/app/src/main/res/layout/layout_dialog_network_alert.xml
+++ b/app/src/main/res/layout/layout_dialog_network_alert.xml
@@ -2,14 +2,14 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/card_background_wallpaper_dialog"
+    android:id="@+id/card_background_network_dialog"
     android:layout_width="match_parent"
     android:layout_height="45dp"
     android:layout_marginBottom="15dp"
     android:orientation="vertical"
     app:cardElevation="0dp"
     app:cardCornerRadius="10dp"
-    app:cardBackgroundColor="#B3000000">
+    app:cardBackgroundColor="#E6000000">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
@@ -19,29 +19,22 @@
         android:paddingStart="10dp"
         android:paddingEnd="10dp">
 
-
-        <ImageView
-            android:id="@+id/image_view_success_wallpaper_dialog"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:src="@drawable/ic_check_circle" />
-
         <TextView
-            android:id="@+id/text_title_wallpaper_dialog"
+            android:id="@+id/text_title_network_dialog"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="7dp"
             android:gravity="center|left"
-            tools:text="@string/string_alert_success_download"
+            android:text="@string/string_alert_network_error"
             android:textColor="@color/white" />
 
 
         <ImageView
-            android:id="@+id/image_view_icon_wallpaper_dialog"
+            android:id="@+id/image_view_icon_network_dialog"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_wallpaper" />
+            android:src="@drawable/ic_signal_wifi_off" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
